package structural.bridge;

/**
 * Interface da abstração para composição de Encantamento
 * @author <a href="mailto:jean.zanatta@unoesc.edu.br">Jean Luiz Zanatta</a>
 * @since 14/01/2022
 */
public interface Encantamento {

	void aplicar();

	void emAtivacao();

	void emDesativacao();
}
